Update java_gateway_launch.md